test.tf
# Create a test VPC
resource "aws_vpc" "example" {
  cidr_block = "10.0.0.0/16"
}
